# Product-Export-Refactoring-Kata

./: .gitignore  README.md  license.txt  pom.xml
C/: .gitignore  LinkedMap.h  Order.c  Order.h  Price.c  Price.h  Product.h  SampleModelObjects.c  SampleModelObjects.h  Store.c  Store.h  StringBuilder.c  (+8 more)
Cpp/: CMakeLists.txt  README.md
Cpp/lib/: ApprovalTests.hpp  ApprovalTests.v.8.8.0.hpp  CMakeLists.txt
Cpp/lib/catch2/: catch.hpp
Cpp/src/: CMakeLists.txt  Order.cpp  Order.h  Price.cpp  Price.h  Product.cpp  Product.h  Store.cpp  Store.h  StoreEvent.cpp  StoreEvent.h  TaxCalculator.h  Util.h  XMLExporter.cpp  XMLExporter.h
Cpp/test/: CMakeLists.txt  XMLExporterTest.XMLExporter.export_full.approved.xml  XMLExporterTest.XMLExporter.export_history.approved.xml  XMLExporterTest.XMLExporter.export_store.approved.xml  XMLExporterTest.XMLExporter.export_tax_details.approved.xml  XMLExporterTest.cpp  XMLExporterTest.exportHistory.approved.xml  XMLExporterTest.exportStore.approved.xml  XMLExporterTest.exportTaxDetails.approved.xml  main.cpp
Cpp/test-catch2/: CMakeLists.txt  sample_catch.XMLExporter.export_tax_details.approved.xml  sample_catch.cpp
Cpp/test-doctest/: CMakeLists.txt  sample_doctest.XMLExporter.export_history.approved.xml  sample_doctest.cpp
Cpp/test-gtest/: CMakeLists.txt  SampleModelObjects.h  sample_gtest.ProductExportTest.exportFull.approved.xml  sample_gtest.cpp
c_catch2/src/: CMakeLists.txt  LinkedList.c  LinkedList.h  LinkedMap.c  Order.h  Price.h  Product.c  Product.h  Store.h  StoreEvent.c  StoreEvent.h  StringBuilder.h  TaxCalculator.c  Util.h  XMLExporter.c
(+105 files in other folders)
